src/components/common/Button/styles.module.css
/* src/components/common/Button/styles.module.css */

.button {
  display: inline-flex;
  justify-content: center;
  align-items: center;

  border-radius: 0.25rem;

  font-style: normal;
  font-weight: 500;
  line-height: 140%;
  width: fit-content;
  gap: 0.12rem;
}

.block {
  width: 100%;
}

.primary {
  background: var(--Primary-strong);
  color: var(--Common-white);
}

.secondary {
  background: var(--Common-black);
  color: var(--Common-white);
}

.tertiary {
  background: var(--Primary-light);
  color: var(--Primary-strong);
}

.disabled {
  background: var(--Neutral-95);
  color: var(--Neutral-70);
}

.outlined {
  background: var(--Common-white);
  color: var(--Primary-strong);
  border: 1px solid var(--Primary-strong);
}

.small {
  height: 1.875rem;
  font-size: 0.75rem;
  letter-spacing: -0.03rem;
  font-weight: 500;
  line-height: 140%;
  padding: 0.375rem 0.75rem 0.4375rem 0.75rem;
}

.medium {
  height: 2.25rem;
  font-size: 1rem;
  letter-spacing: -0.04rem;
  font-weight: 500;
  line-height: 140%;
  padding: 0.4375rem 1rem;
}

.large {
  height: 2.625rem;
  font-size: 1.125rem;
  letter-spacing: -0.045rem;
  font-weight: 500;
  line-height: 140%;
  padding: 0.4375rem 1.25rem 0.5rem 1.25rem;
}

.extraLarge {
  height: 2.875rem;
  font-size: 1.125rem;
  letter-spacing: -0.05rem;
  font-weight: 500;
  line-height: 140%;
  padding: 0.625rem 1.25rem 0.6875rem 1.625rem;
}

.icon {
  padding-left: 0.12rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.textOnly {
  background: none;
  padding: 0;
  border: none;
  color: var(--Neutral-60);
}

.iconOpacity {
  border-radius: 0.25rem;
  background: var(--Opacity_b_40);
  color: var(--Common-white);
}

